# optipack-v2

./: .env.example  .gitignore  .npmrc  PERMISSIONS-PLAN.md  PLAN.md  TODO.md  docker-compose.control-plane.yml  docker-compose.prod.yml  docker-compose.yml  jj  l  new-plan.md  otp  package.json  pnpm-lock.yaml  rapport journalier  t  turbo.json
.github/workflows/: bootstrap-main-vps.yml  build-images.yml  deploy-api.yml  deploy-ops-admin.yml  deploy-orchestrator.yml  deploy-web-client.yml  deploy-web.yml  desktop-release.yml  full-reset.yml
apps/api/: package.json  tsconfig.json
apps/mobile/: app.config.ts  babel.config.cjs  eas.json  metro.config.cjs  package.json  tsconfig.json
apps/ops-admin/: .gitignore  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/orchestrator/: README.md  package.json
apps/tablet/: .easignore  .gitignore  app.config.ts  app.json  babel.config.cjs  eas.json  index.js  metro.config.cjs  package.json  (+1 more)
apps/web-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web-desktop/src-tauri/capabilities/: default.json
apps/web-desktop/src-tauri/icons/: icon.icns
apps/web-desktop/src-tauri/src/: lib.rs  main.rs
docs/: AUDIT-SYSTEME-2026-07.docx  AUDIT-SYSTEME-2026-07.md  CONTRAT-ABONNEMENT-TENANT.docx  CONTRAT-ABONNEMENT-TENANT.md  caddy-reconcile.md  cahier-des-charges.md  control-plane-setup.md  design-audit.md  mail-vps-setup.md  main-vps-setup.md  master-key-rotation.md  permissions-audit.md  permissions.md  tech-debt.md  vps-setup.md
patches/: stream-chat-expo@5.45.2.patch
scripts/: reconcile-caddy.sh
(+1576 files in other folders)
