[package]
name = "transitsoft-desktop"
version = "0.1.0"
description = "TransitSoft backoffice — desktop (Tauri)"
authors = ["TransitSoftServices"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "transitsoft_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Stockage securise des tokens via le trousseau OS (Keychain macOS /
# Credential Manager Windows / Secret Service Linux) au lieu du localStorage.
keyring = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
